# MahoShojo

./: CMakeLists.txt  LICENSE  README.md
doc/: AST.md
grammar/: MHSJParser.yy  MHSJScanner.ll
include/ASTBuilder/: SyntaxTree.h
include/ASTPrinter/: SyntaxTreePrinter.h
include/CodeGen/: CodeGen.h  IR2asm.h  RegAlloc.h  ValueGen.h
include/ErrorReport/: ErrorReporter.h
include/MHSJBuilder/: MHSJBuilder.hpp
include/Optimize/: ActiveVar.h  AvailableExpr.h  CFGSimplifier.h  CFG_analyse.h  ConstPropagation.h  DeadCodeElimination.h  DominateTree.h  FuncInline.h  Global2Local.h  LIR.h  LoopExpansion.h  LoopInvariant.h  MovConst.h  Pass.h  SCCP.h  SideEffectAnalysis.h  mem2reg.h
include/StaticChecker/: SyntaxTreeChecker.h
include/grammar/: MHSJDriver.h  MHSJFlexLexer.h  MHSJParser.h
include/mir/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRBuilder.h  IRprinter.h  Instruction.h  Module.h  Type.h  User.h  Value.h
lib/: lib.c  sylib.h  x86_64_sylib.c
src/: main.cpp
src/ASTBuilder/: CMakeLists.txt  SyntaxTree.cpp
src/ASTPrinter/: CMakeLists.txt  SyntaxTreePrinter.cpp
src/CodeGen/: CMakeLists.txt  CodeGen.cpp  IR2asm.cpp  RegAlloc.cpp
src/ErrorReport/: CMakeLists.txt  (+1 more)
src/Optimize/: ActiveVar.cpp  AvailableExpr.cpp  CFGSimplifier.cpp  CFG_analyse.cpp  CMakeLists.txt  ConstPropagation.cpp  DeadCodeElimination.cpp  DominateTree.cpp  FuncInline.cpp  Global2Local.cpp  LIR.cpp  LoopExpansion.cpp  LoopInvariant.cpp  MovConst.cpp  Pass.cpp  SCCP.cpp  SideEffectAnalysis.cpp  mem2reg.cpp
test/: test.py  test_asm_armv7.py  test_performance.py
(+24 files in other folders)
